--- a/chime/static/sass/components/_modal.scss
+++ b/chime/static/sass/components/_modal.scss
@@ -1,5 +1,5 @@
 .modal-container {
-	@include transition(opacity .2s ease-out, margin-top .1s ease-out);
+	@include animation(modal-container .2s ease-out);
 	@include display(flex);
 	@include justify-content(center);
 	@include align-items(center);
@@ -10,17 +10,19 @@
 	right: 0;
 	background-color: $color-grey-800;
 	background-color: rgba(#000, .15);
-	z-index: -2;
 	opacity: 0;
 	margin-top: -2em;
+	display: none;
 	&.is-open {
+		display: block;
+		display: flex;
 		margin-top: 0;
-		z-index: 9999;
 		opacity: 1;
 	}
 }
 .modal {
 	@include clearfix();
+	@include animation(modal .2s ease-out);
 	background-color: #fff;
 	box-shadow: $box-shadow-2;
 	width: 600px;
