--- a/chime/static/sass/components/_tooltip.scss
+++ b/chime/static/sass/components/_tooltip.scss
@@ -1,7 +1,7 @@
 .tooltipped {
 	position: relative;
 	&:hover {
-		.tooltipped__tt-container {
+		.tooltipped__tt {
 			@include animation(tooltip .2s ease-out);
 			display: block;
 			top: 100%;
@@ -10,17 +10,13 @@
 	}
 }
 
-.tooltipped__tt-container {
+.tooltipped__tt {
+	@include transform(translateX(-50%));
 	display: none;
 	position: absolute;
 	left: 50%;
 	top: 120%;
 	margin-top: 6px;
-}
-
-.tooltipped__tt {
-	position: relative;
-	left: -50%;
 	background-color: $color-grey-200;
 	border: 1px solid $color-grey-300;
 	color: #000;
@@ -29,6 +25,7 @@
 	text-align: center;
 	font-weight: 400;
 	font-size: $small-font-size;
+	z-index: 9999;
 
 	&:before {
 		position: absolute;
@@ -36,5 +33,14 @@
 		margin-left: -5px;
 		top: -8px;
 		@include triangle(top, $color-grey-300, 5px);
+	}
+
+	// Different treatment of tooltips to get around lack of translateX support for <IE10
+	// Tooltip is not centered in this case but aligned left
+	.lt-ie10 & {
+		margin-left: -50%;	
+		&:before {
+			left: 5px;
+		}
 	}
 }
