--- a/chime/static/sass/core/_animations.scss
+++ b/chime/static/sass/core/_animations.scss
@@ -21,3 +21,31 @@
 	   top: 100%;
 	 }
 }
+
+@include keyframes(modal-container) {
+	0% {
+	   display: none;
+	   opacity: 0;
+	 }
+	 1% {
+	   display: block;
+	 }
+	 100% {
+	   opacity: 1;
+	 }
+}
+
+@include keyframes(modal) {
+	0% {
+	   display: none;
+	   opacity: 0;
+	   margin-top: 4em;
+	 }
+	 1% {
+	   display: block;
+	 }
+	 100% {
+	   opacity: 1;
+	   margin-top: 0;
+	 }
+}
